--- a/A Tribute page/index.html
+++ b/A Tribute page/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A tribute to APJ Abdul Kalam">
+    <meta name="author" content="Ayan">
     <title>A tribute page</title>
     <link rel="stylesheet" href="style.css">
 </head>
