--- a/log-in-page/log-in.html
+++ b/log-in-page/log-in.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     <link rel="stylesheet" href="log-in.css">
+    
 </head>
 <body>
-    <div class="container">
+    <div  class="container">
         <form>
             <h2><u>ACCOUNT LOGIN</u></h2>
             <br><br><br>
@@ -36,5 +38,23 @@
             <a href="Register" title="Register">Don't have an account? Register.</a>
         </div>
     </div>
+
+    <script src="app.js"></script>
+    <script src="particles.js"></script>
+
+    <!-- <script type="text/javascript" src="particles.js"></script>
+    <script type="text/javascript" src="app.js"></script> -->
+
+    <!-- <script>
+        snowFall.snow(document.querySelector(".container"),{
+            round:true,
+            minSize:1,
+            maxSize:6,
+
+        })
+
+    </script> -->
+
+
 </body>
 </html>
